Editing title in header

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Roi-Test-Site</title>
+	<title>Roi-Test-Site-main</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
