--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
 		<a href="tel:+79819999999">+79819999999</a>
 	</p>
 
+	<form id="form-site" action="#" method="post" novalidate>
+  <div>
+    <label for="name">Имя</label><br />
+    <input id="name" name="Name" type="text" required placeholder="Ваше имя" />
+  </div>
+
+  <div style="margin-top:8px;">
+    <label for="email">Электронная почта</label><br />
+    <input id="email" name="Email" type="email" required placeholder="you@example.com" />
+  </div>
+
+  <div style="margin-top:12px;">
+    <button type="submit">Отправить</button>
+  </div>
+</form>
+
 <!-- Roistat Counter Start -->
 <script>
 (function(w, d, s, h, id) {
