Editing contact email

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<button id='btn4Event'>JS-Event</button>
 	<p> Связь через Почту: 
-		<a href="mailto:main-pochta@ex.com">main-pochta@ex.com</a>
+		<a href="mailto:sukhanov.yu@roistat.com">sukhanov.yu@roistat.com</a>
 	</p>
 
 	<p> Связь через Звонок: 
