Editing contact email on roi-teh-sup

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <button id="btn4Event">JS-Event</button>
     <p>
       Связь через Почту:
-      <a href="mailto:sukhanov.yu@roistat.com">sukhanov.yu@roistat.com</a>
+      <a href="mailto:roistat-tech-sup@yandex.ru">roistat-tech-sup@yandex.ru</a>
     </p>
 
     <p>
